# camera-app_best_one

.github/workflows/: android-build.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  doc_scan.cpp
app/src/main/java/com/replit/cameraapp/: MainActivity.kt
gradle/: libs.versions.toml
